swap page comments section added, scrollbar fixed for auction page

--- a/src/components/Futa/Comments/Comments.module.css
+++ b/src/components/Futa/Comments/Comments.module.css
@@ -64,7 +64,9 @@
     max-height: calc(94svh - 170px);
     position: absolute;
     bottom: 4rem;
+    scrollbar-color:  var(--accent1) var(--dark2);
     }
+
     
   .comments_content{
     }
@@ -249,10 +251,19 @@
   .mainContainer{
     height: calc(100svh - 240px);
   }
+  
+  
+  .mainContainer.tradePage{
+    height: calc(100svh - 190px);
+  }
 
   
   .commentsWrapper{
     max-height: 60svh;
+  }
+
+  .tradePage .commentsWrapper{
+    max-height: 70svh;
   }
 
     }
